--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "vite",               
+    "build": "vite build",        
+    "start": "vite preview"       
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
